--- a/Blog.Admin/Views/Post/Edit.cshtml
+++ b/Blog.Admin/Views/Post/Edit.cshtml
@@ -95,7 +95,7 @@
 
 @* Topic *@
 <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
-    <label asp-for="PostEditFormData.Topic" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Topic</label>
+    <label asp-for="PostEditFormData.Topic" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
     <div class="mt-1 sm:col-span-2 sm:mt-0">
         <select asp-for="PostEditFormData.Topic" asp-items="Model.DomainTopics" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
         </select>
@@ -104,7 +104,7 @@
 
 @* category *@
 <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
-    <label asp-for="PostEditFormData.Category" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Category</label>
+    <label asp-for="PostEditFormData.Category" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
     <div class="mt-1 sm:col-span-2 sm:mt-0">
         <select asp-for="PostEditFormData.Category" asp-items="Model.DomainCategories" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
         </select>
@@ -113,12 +113,9 @@
 
 @* 语言 *@
 <div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
-    <label asp-for="PostEditFormData.Language" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Language</label>
+    <label asp-for="PostEditFormData.Language" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2"></label>
     <div class="mt-1 sm:col-span-2 sm:mt-0">
-        <select asp-for="PostEditFormData.Language" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
-            <option value="zh">中文</option>
-            <option value="en">English</option>
-            <option value="ja">日本語</option>
+        <select asp-for="PostEditFormData.Language" asp-items="Model.SupportLanguages" autocomplete="country-name" class="block w-full max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
         </select>
     </div>
 </div>
@@ -200,7 +197,7 @@
                                 <img alt="cover" x-bind:src="image.url" class="h-28 w-28 p-2 col-span-1 p-2 border border-gray-200 rounded-md object-contain bg-gray-200" src=""/>
                                 <textarea x-model="image.caption" rows="4" x-bind:id="contentImagesTextareaId(index, imageIndex)" class="block col-span-2 h-28 rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm"></textarea>
                                 <div class="flex flex-col gap-4 col-span-1 justify-between h-28">
-                                    <button x-on:click="deleteImage(index, imageIndex)" type="button" class="h-8 inline-flex items-center rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium leading-4 text-red-500 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Delete</button>
+                                    <button x-on:click="deleteImage(index, imageIndex)" type="button" class="h-8 inline-flex items-center justify-center rounded-md border border-gray-300 bg-white px-3 py-2 text-sm font-medium leading-4 text-red-500 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">@CommonLocalization.Get("删除")</button>
                                     <div class="text-xs font-medium">
                                         <div class="text-gray-400">@CommonLocalization.Get("状态")</div>
                                         <div class="text-gray-800" x-text="image.status?.toUpperCase()"></div>
