--- a/Blog.Admin/Views/Shared/_Layout1.cshtml
+++ b/Blog.Admin/Views/Shared/_Layout1.cshtml
@@ -126,7 +126,7 @@
                             <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
                         </svg>
                     </div>
-                    <input type="text" name="search" id="search" class="block w-full rounded-md border-gray-300 pl-9 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="Search">
+                    <input type="text" name="search" id="search" class="block w-full rounded-md border-gray-300 pl-9 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="@CommonLocalization.Get("搜索")">
                 </div>
             </div>
 
