--- a/Blog.Admin/Views/Topic/Index.cshtml
+++ b/Blog.Admin/Views/Topic/Index.cshtml
@@ -11,10 +11,10 @@
 <!-- Page title & actions -->
 <div class="border-b border-gray-200 px-4 py-4 sm:flex sm:items-center sm:justify-between sm:px-6 lg:px-8">
     <div class="min-w-0 flex-1">
-        <h1 class="text-lg font-medium leading-6 text-gray-900 sm:truncate">Topic</h1>
+        <h1 class="text-lg font-medium leading-6 text-gray-900 sm:truncate">@CommonLocalization.Get("话题")</h1>
     </div>
     <div class="mt-4 flex sm:mt-0 sm:ml-4">
-        <a asp-action="AddTopic" asp-controller="Topic" asp-route-domainId="@domainId" type="button" class="order-0 inline-flex items-center rounded-md border border-transparent bg-purple-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 sm:order-1 sm:ml-3">Create</a>
+        <a asp-action="AddTopic" asp-controller="Topic" asp-route-domainId="@domainId" type="button" class="order-0 inline-flex items-center rounded-md border border-transparent bg-purple-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:ring-offset-2 sm:order-1 sm:ml-3">@CommonLocalization.Get("创建")</a>
     </div>
 </div>
 
@@ -23,8 +23,8 @@
     <table class="min-w-full divide-y divide-gray-300">
         <thead class="bg-gray-50">
         <tr>
-            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
-            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">Id</th>
+            <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">@CommonLocalization.Get("名称")</th>
+            <th scope="col" class="hidden px-3 py-3.5 text-left text-sm font-semibold text-gray-900 lg:table-cell">@CommonLocalization.Get("键")</th>
             <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                 <span class="sr-only">Action</span>
             </th>
@@ -44,12 +44,12 @@
                 </td>
                 <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell">@topic.Id</td>
                 <td class="py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-                    <a asp-action="EditTopic" asp-route-id="@topic.Id" asp-route-domainId="@Context.GetDomainIdFromHttpContextItems()" class="text-indigo-600 hover:text-indigo-900">Edit</a>
+                    <a asp-action="EditTopic" asp-route-id="@topic.Id" asp-route-domainId="@Context.GetDomainIdFromHttpContextItems()" class="text-indigo-600 hover:text-indigo-900">@CommonLocalization.Get("编辑")</a>
                     <form id="delete-topic-form-@topic.Id" method="POST" asp-action="DeleteTopic" asp-controller="Topic">
                         <input type="hidden" name="@nameof(DeleteTopicDto.TopicId)" value="@topic.Id"/>
                         <input type="hidden" name="@nameof(DeleteTopicDto.DomainId)" value="@domainId"/>
                     </form>
-                    <button x-on:click="popUpDanger('Delete topic confirm', 'are you sure you want to delete the topic of @topic.Name (@topic.Id)?', 'Cancel', 'Delete', '#delete-topic-form-@topic.Id')" class="text-indigo-600 hover:text-indigo-900">Delete</button>
+                    <button x-on:click="popUpDanger('Delete topic confirm', 'are you sure you want to delete the topic of @topic.Name (@topic.Id)?', 'Cancel', 'Delete', '#delete-topic-form-@topic.Id')" class="text-indigo-600 hover:text-indigo-900">@CommonLocalization.Get("删除")</button>
                 </td>
             </tr>
         }
