--- a/Blog.Web/Pages/Components/Nav/Default.cshtml
+++ b/Blog.Web/Pages/Components/Nav/Default.cshtml
@@ -1,20 +1,20 @@
 @using Blog.Web.Services
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model Blog.Domain.Models.DomainDto
+@model Blog.Web.ViewModels.ViewComponents.NavViewModel
 @inject CommonLocalizationService CommonLocalization
 
-<nav class="sticky top-0 z-10 bg-white backdrop-filter backdrop-blur-lg bg-opacity-30">
+<nav class="sticky top-0 z-20 bg-white backdrop-filter backdrop-blur-lg bg-opacity-30">
     <div class="max-w-[980px] mx-auto">
         <div class="flex items-center justify-between h-12">
-            <a asp-route-culture="@Context.Request.RouteValues["culture"]" asp-page="/Index" class="block text-xl text-gray-900 font-medium">@Model.Name</a>
+            <a asp-route-culture="@Context.Request.RouteValues["culture"]" asp-page="/Index" class="block text-xl text-gray-900 font-medium">@Model.DomainInfo!.Name</a>
             <div class="flex gap-8 text-gray-900 text-xs">
                 <button type="button" class="flex items-center justify-between gap-1">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-3 h-3">
                         <path fill-rule="evenodd" d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z" clip-rule="evenodd"/>
                     </svg>
-                    @CommonLocalization.GetWith("站内搜索", Model.Name)
+                    @CommonLocalization.GetWith("站内搜索", Model.DomainInfo!.Name)
                 </button>
-                <button type="button" class="flex items-center justify-between gap-1">
+                <button x-on:click="toggleTopDropDown()" type="button" class="flex items-center justify-between gap-1">
                     @CommonLocalization.Get("热门话题")
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"/>
@@ -24,3 +24,72 @@
         </div>
     </div>
 </nav>
+<div
+    x-show="showTopDropDown"
+    style="display: none;"
+    class="relative z-10" aria-labelledby="slide-over-title" role="dialog" aria-modal="true">
+    <!--
+    Background backdrop, show/hide based on slide-over state.
+
+    Entering: "ease-in-out duration-500"
+    From: "opacity-0"
+    To: "opacity-100"
+    Leaving: "ease-in-out duration-500"
+    From: "opacity-100"
+    To: "opacity-0"
+    -->
+    <div
+        x-show="showTopDropDown"
+        style="display: none;"
+        x-transition:enter="ease-in-out duration-500"
+        x-transition:enter-start="opacity-0"
+        x-transition:enter-end="opacity-100"
+        x-transition:leave="ease-in-out duration-500"
+        x-transition:leave-start="opacity-100"
+        x-transition:leave-end="opacity-0"
+        class="fixed inset-0 top-12 bg-black bg-opacity-40 transition-opacity">
+    </div>
+
+    <div class="fixed inset-0 overflow-hidden">
+        <div class="absolute inset-0 overflow-hidden">
+            <div class="pointer-events-none fixed inset-x-0 top-12 flex">
+                <!--
+                Slide-over panel, show/hide based on slide-over state.
+
+                Entering: "transform transition ease-in-out duration-400 sm:duration-700"
+                From: "translate-x-full"
+                To: "translate-x-0"
+                Leaving: "transform transition ease-in-out duration-400 sm:duration-700"
+                From: "translate-x-0"
+                To: "translate-x-full"
+                -->
+                <div
+                    x-show="showTopDropDown"
+                    style="display: none;"
+                    x-on:keydown.escape.prevent.stop="closeTopDropDown()"
+                    x-on:click.outside="closeTopDropDown()"
+                    x-transition:enter="transform transition ease-in-out duration-200 sm:duration-700"
+                    x-transition:enter-start="-translate-y-full"
+                    x-transition:enter-end="translate-y-0"
+                    x-transition:leave="transform transition ease-in-out duration-200 sm:duration-700"
+                    x-transition:leave-start="translate-y-0"
+                    x-transition:leave-end="-translate-y-full"
+                    class="pointer-events-auto w-screen">
+                    <div class="flex h-full flex-col overflow-y-scroll bg-white py-6">
+                        <div class="relative mt-6 flex-1 px-4 sm:px-6">
+                            @* 下拉栏内容 *@
+                            <div class="max-w-[980px] mx-auto">
+                                <div class="grid grid-cols-4 gap-10 pb-10">
+                                    @foreach (var topic in Model.DomainInfo!.Topics)
+                                    {
+                                        <a class="hover:text-blue-700 @(topic.Id == Model.CurrentTopic ? "text-gray-500" : string.Empty)" asp-page="/Index" asp-route-culture="@Context.Request.RouteValues["culture"]" asp-route-TopicId="@topic.Id">@topic.Name</a>
+                                    }
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
