--- a/Blog.Web/wwwroot/css/tailwindcss.css
+++ b/Blog.Web/wwwroot/css/tailwindcss.css
@@ -991,8 +991,24 @@ select {
   flex: 1 1 0%;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
 .basis-\[453px\] {
   flex-basis: 453px;
+}
+
+.basis-full {
+  flex-basis: 100%;
+}
+
+.basis-0 {
+  flex-basis: 0px;
 }
 
 .translate-x-full {
