--- a/Blog.Web/Pages/Archive/Index.cshtml
+++ b/Blog.Web/Pages/Archive/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="mt-4 bg-gray-100 w-screen">
     <div class="flex gap-4 items-center lg:w-[980px] w-[692px]  mx-auto pt-8 pb-8 text-sm">
-        <div class="font-semibold text-gray-500">@Localizer["筛选"]</div>
+        <div class="font-semibold text-gray-500 whitespace-nowrap">@Localizer["筛选"]</div>
 
         @* Domain Dropdown Selection *@
         <div class="w-72 font-medium">
@@ -186,7 +186,7 @@
         </div>
 
 
-        <a asp-route-TopicIdFilter="" asp-route-YearFilter="" asp-route-MonthFilter="" class="text-blue-600 font-medium">@Localizer["重置"]</a>
+        <a asp-route-TopicIdFilter="" asp-route-YearFilter="" asp-route-MonthFilter="" class="text-blue-600 font-medium whitespace-nowrap">@Localizer["重置"]</a>
     </div>
 </div>
 
