--- a/Blog.Web/Pages/Post/Index.cshtml
+++ b/Blog.Web/Pages/Post/Index.cshtml
@@ -36,7 +36,7 @@
             @if (b.Paragraph != null)
             {
                 <div class="lg:w-[653px] w-[576px] mx-auto">
-                    <p>@b.Paragraph</p>
+                    <p class="text-lg">@b.Paragraph</p>
                 </div>
             }
             else if (b.Images != null)
